Clean up element code & add more docs

--- a/demo.css
+++ b/demo.css
@@ -1,19 +1,11 @@
-:host {
-  display: block;
-}
-
-:host *,
-::content * {
+body {
   font-family: Helvetica, sans-serif;
+  font-size: 16px;
 }
 
-::content > * {
+wizard-step {
   border: 1px solid #aaa;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-}
-
-::content * {
-  font-size: 16px;
   padding: 10px;
 }
 
